# opengl-playground

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake  main
include/: Camera.cpp  Camera.hpp  Game.cpp  Game.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp
include/assets/: models.hpp
include/glad/: glad.h
include/shaders/: colors.frag  colors.vert  cubemap.vert  fb.frag  fb.vert  fragmentShader.frag  fragmentShader.fs  lightFragmentShader.frag  light_cube.frag  vertexShader.vert  vertexShader.vs
src/: .main.cpp.kate-swp  glad.c  main.cpp
src/include/: Game.cpp  Game.hpp
src/shaders/: fragmentShader  vertexShader
